<resources>
    <string name="app_name">EnergyChallenge</string>

    //Action Bar
    <string name="action_search">Suchen</string>

    //Navigation
    <string name="navigation_option1">EnergyChallenge</string>
    <string name="navigation_option2">Mein Profil</string>
    <string name="navigation_option3">Rangliste</string>
    <string name="navigation_option4">Aktivitäten</string>
    <string name="navigation_option5">Energiesparvorschläge</string>
    <string name="navigation_option6">Einstellungen</string>

    <string name="navigation_drawer_open">Navigation öffnen</string>
    <string name="navigation_drawer_close">Navigation schließen</string>

    //Login Activity
    <string name="logIn_emailHint">E-Mail Adresse</string>
    <string name="logIn_passwordHint">Passwort</string>
    <string name="logIn_signInButton">Anmelden</string>

    //Main Activity
    <string name="title_activity_main">EnergyChallenge</string>

    //Search Activity
    <string name="title_activity_search">EnergyChallenge</string>

    //Main Fragment (Landing Page)
    <string name="main_title">Favoriten</string>

    //My Profile
    <string name="profile_myName">Samuel Barnes</string>
    <string name="profile_myTeam">Softwareprojekt Grüppe 2</string>
    <string name="profile_myFacility">Institut für Informatik</string>
    <string name="profile_myEmail">up687474@myport.ac.uk</string>
    <string-array name="profile_myRecentActivities">
        <item>Mit dem Fahrrad zur Uni fahren</item>
        <item>Immer das Licht ausschalten</item>
    </string-array>
    <string name="profile_recentActivities">Letzte Aktivitäten</string>
    <string name="profile_myAvatarDescription">Mein Profilbild</string>

    //Rankings List
    <string name="rankings_title">Rangliste</string>
    <string name="rankings_userTab">Benutzer</string>
    <string name="rankings_teamsTab">Teams</string>

    //Activities
    <string name="activities_title">Aktivitäten erledigen</string>

    //Proposals
    <string name="proposals_title">Vorschläge</string>
    <string name="proposals_create">Vorschlagen</string>

    //Options
    <string name="options_title">Optionen</string>
    <string name="options_notifications">Benachrichtigungen</string>
    <string name="options_logout">Ausloggen</string>

    //Options
    <string name="app_label">EnergyChallenge</string>
    <string name="search_hint">Suchen</string>

    <string name="no_network_connection">Keine Internetverbindung verfügbar.</string>
    <string name="invalide_login">Die E-Mail Adresse oder das Passwort ist ungültig.</string>
    <string name="error_in_server_communication">Es ist ein Fehler bei der Kommunikation mit dem Server aufgetreten.</string>
    <string name="title_activity_profile">Profil</string>

    <string name="creator">Ersteller</string>
    <string name="comment">Kommentar</string>
    <string name="comments">Kommentare</string>
    <string name="title_activity_proposal">Energiesparvorschlag</string>

    <string name="complete_activity_successfull">Die Aktivität wurde erfolgreich ausgeführt.</string>
    <string name="complete_activity_failed">Die Aktivität konnte nicht ausgeführt werden.</string>

    <string name="your_comment">Ihr Kommentar</string>

    <string name="comment_proposal_successfull">Der Vorschlag wurde erfolgreich kommentiert.</string>
    <string name="comment_proposal_failed">Beim Kommentieren ist leider ein Fehler aufgetreten.</string>

    <string name="submit">Absenden</string>

    <string name="point">Punkt</string>
    <string name="points">Punkte</string>
    <string name="position">Platz</string>

    <string name="sure_to_complete">Soll die Aktivität wirklich ausgeführt werden?</string>
    <string name="complete">Erledigen</string>
    <string name="cancel">Abbrechen</string>

    <string name="settings">Einstellungen</string>
    <string name="notifications">Benachrichtigungen</string>
    <string name="settings_notification_summary">Benachrichtigen bei aktuellen Nachrichten der EnergyChallenge</string>
    <string name="useraccount">Benutzerkonto</string>
    <string name="your_name">Ihr Name</string>
    <string name="your_email">Ihre E-Mail Adresse</string>
    <string name="logout">Abmelden</string>
    <string name="info">Info</string>
    <string name="buildVersion">Build-Version</string>

    //Notification Service
    <string name="notificationServiceTitle">Notification Service</string>

</resources>
