<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="de.unikiel.klik.energychallenge.activities.MainActivity.NavigationFragment">

    <!-- Main container -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Users avatar image -->
            <ImageView
                android:id="@+id/profile_my_avatar"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:src="@drawable/temp_avatar"
                android:contentDescription="@string/profile_myAvatarDescription"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Users name -->
                <TextView
                    android:id="@+id/profile_my_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_myName"
                    android:textSize="32sp"/>

                <!-- Users team -->
                <TextView
                    android:id="@+id/profile_my_team"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_myTeam"
                    android:textSize="20sp"/>

            </LinearLayout>

        </LinearLayout>

        <!-- Horizontal spacer -->
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="7dip"
            android:layout_marginBottom="7dip"
            android:background="@android:color/darker_gray"/>

        <!-- Users facility -->
        <TextView
            android:id="@+id/profile_my_facility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_myFacility"
            android:textSize="16sp"/>

        <!-- Users email -->
        <TextView
            android:id="@+id/profile_my_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_myEmail"
            android:textSize="16sp"/>

        <!-- Recent activities title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_recentActivities"
            android:textSize="32sp"
            android:layout_marginTop="15dip"/>

        <!-- Horizontal spacer -->
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="7dip"
            android:layout_marginBottom="7dip"
            android:background="@android:color/darker_gray"/>

        <!-- Users recent activities -->
        <ListView
            android:id="@+id/profile_my_recent_activities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


        </ListView>

    </LinearLayout>

</RelativeLayout>
