<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context=".Login">

    <LinearLayout
        android:id="@+id/logInLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/logInUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minEms="12"
            android:layout_margin="3dip"
            android:inputType="textEmailAddress"
            android:hint="@string/logIn_emailHint"/>

        <EditText
            android:id="@+id/logInPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minEms="12"
            android:layout_margin="3dip"
            android:inputType="textPassword"
            android:hint="@string/logIn_passwordHint"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dip"
            android:gravity="center"
            android:onClick="logIn"
            android:text="@string/logIn_signInButton"/>

    </LinearLayout>

</RelativeLayout>
